--- a/html/dash-test.html
+++ b/html/dash-test.html
@@ -7,8 +7,13 @@
   </head>
   <body>
     <div id="mainContainer" class="mainContainer">
-      <video id="dash-vide" width="320" height="240" controls></video>
+      <video id="dash-vide" width="320" height="240" controls autoplay></video>
       <br>
     </div>
+    <div id="latency-tag"></div>
+    <div id="mindrift-tag"></div>
+    <div id="playbackrate-tag"></div>
+    <div id="buffer-tag"></div>
+    <div id="catchup-threshold-tag"></div>
  </body>
 </html>
