--- a/client/main.html
+++ b/client/main.html
@@ -1,9 +1,9 @@
 <head>
   <title>test-meteor</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
-  <a href="/camera">Camera</a>
-  <a href="/viewer">Viewer</a>
+
 </body>
