rest api, zoom menu

--- a/client/viewer.html
+++ b/client/viewer.html
@@ -25,12 +25,11 @@
 
         <!-- Dropdown Structure -->
         <ul id='dropdown1' class='dropdown-content'>
-          <li><a href="{{streamURL}}">uv4l</a></li>
-          <li><a href="#!">two</a></li>
+          <li><a href="{{streamURL}}"><i class="material-icons">open_in_new</i>uv4l</a></li>
           <li class="divider" tabindex="-1"></li>
-          <li><a href="#!">three</a></li>
-          <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
-          <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
+          <li><a class="rest-zoom1" href="#"><i class="material-icons">zoom_out</i>1x</a></li>
+          <li><a class="rest-zoom2" href="#"><i class="material-icons">search</i>2x</a></li>
+          <li><a class="rest-zoom3" href="#"><i class="material-icons">zoom_in</i>3x</a></li>
         </ul>
       </section>
     </floatmenu>
