method setViewerOrientation, display angles

--- a/client/viewer.html
+++ b/client/viewer.html
@@ -3,9 +3,9 @@
     <floatmenu class="{{#if menuVisible}}visible{{/if}}">
       <section>
         <div class="status">
-          <div class="alpha">{{orientation.a}}</div>
-          <div class="beta">{{orientation.b}}</div>
-          <div class="gamma">{{orientation.c}}</div>
+          <div class="alpha">H: {{orientation.a}}</div>
+          <div class="beta">P: {{orientation.b}}</div>
+          <div class="gamma">R: {{orientation.c}}</div>
         </div>
       </section>
 
