--- a/client/viewer.html
+++ b/client/viewer.html
@@ -32,6 +32,13 @@
           <li><a class="rest-zoom3" href="#"><i class="material-icons">zoom_in</i>3x</a></li>
         </ul>
       </section>
+
+      <section>
+        <a class="waves-effect waves-light btn lock">
+          <i class="material-icons">{{#if locked}}lock{{else}}lock_open{{/if}}</i>
+        </a>
+      </section>
+
     </floatmenu>
 
     <img src="/stream/video.mjpeg" class="live-image">
