--- a/client/viewer.html
+++ b/client/viewer.html
@@ -37,6 +37,10 @@
         <a class="waves-effect waves-light btn lock">
           <i class="material-icons">{{#if locked}}lock{{else}}lock_open{{/if}}</i>
         </a>
+
+        <a class="waves-effect waves-light btn set-offset">
+          <i class="material-icons">gps_fixed</i>
+        </a>
       </section>
 
     </floatmenu>
