--- a/client/viewer.html
+++ b/client/viewer.html
@@ -3,9 +3,9 @@
     <floatmenu class="{{#if menuVisible}}visible{{/if}}">
       <section>
         <div class="status">
-          <div class="alpha">H: {{orientation.a}}</div>
-          <div class="beta">P: {{orientation.b}}</div>
-          <div class="gamma">R: {{orientation.c}}</div>
+          <div class="alpha">H: {{orientation.a}} - {{offset.a}}</div>
+          <div class="beta">P: {{orientation.b}} - {{offset.b}}</div>
+          <div class="gamma">R: {{orientation.c}} - {{offset.c}}</div>
         </div>
       </section>
 
