swap pitch and roll

--- a/client/viewer.html
+++ b/client/viewer.html
@@ -4,8 +4,8 @@
       <section>
         <div class="status">
           <div class="alpha">H: {{orientation.a}} - {{offset.a}}</div>
-          <div class="beta">P: {{orientation.b}} - {{offset.b}}</div>
-          <div class="gamma">R: {{orientation.c}} - {{offset.c}}</div>
+          <div class="gamma">R: {{orientation.c}} - {{offset.b}}</div>
+          <div class="beta">P: {{orientation.b}} - {{offset.c}}</div>
         </div>
       </section>
 
